[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Script_Shop.gd" type="Script" id=1]
[ext_resource path="res://OtherHolder/ScrollTextBackgroundCyan.png" type="Texture" id=2]
[ext_resource path="res://OtherHolder/MenuBG01.01.png" type="Texture" id=3]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font bigger.tres" type="DynamicFont" id=4]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=5]
[ext_resource path="res://Inventory_Icons/Coins50x50.png" type="Texture" id=6]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font medium.tres" type="DynamicFont" id=7]
[ext_resource path="res://OtherHolder/MenuBG01.03.png" type="Texture" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://OtherHolder/MenuBG01.05.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Shop" type="Spatial"]

pause_mode = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="NinePatchRect" parent="Control" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Pause" ]

[node name="BGContainer" type="Control" parent="Control/TextureRect" index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BG" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -368.0
margin_right = 199.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )

[node name="BG4" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -558.0
margin_top = -440.0
margin_right = -224.0
margin_bottom = -336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="BG5" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 220.0
margin_top = -440.0
margin_right = 554.0
margin_bottom = -336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="BG2" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -470.0
margin_right = 199.0
margin_bottom = -366.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="BG3" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 230.0
margin_right = 199.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="BG6" type="NinePatchRect" parent="Control/TextureRect/BGContainer" index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -710.0
margin_top = 230.0
margin_right = -434.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="ShopTitle" type="Label" parent="Control/TextureRect" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -50.0
margin_top = 90.0
margin_right = 49.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Shop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Button_Return_To_World" type="Button" parent="Control/TextureRect" index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.0
margin_top = -297.0
margin_right = 181.0
margin_bottom = -223.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return To World"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="Control/TextureRect" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 170.0
margin_right = 890.0
margin_bottom = 770.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]

[node name="CoinsTexture" type="TextureRect" parent="Control/TextureRect/NinePatchRect" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 610.0
margin_right = 70.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="CoinsLabel" type="Label" parent="Control/TextureRect/NinePatchRect/CoinsTexture" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 9.0
margin_right = 211.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "1000000000"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label2" type="Label" parent="Control/TextureRect/NinePatchRect/CoinsTexture" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 9.0
margin_right = 140.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.898438, 1, 0, 1 )
text = "x"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="PlayerTitle" type="Label" parent="Control/TextureRect/NinePatchRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_top = -60.0
margin_right = 800.0
margin_bottom = -9.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Player Inventory"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemList" type="ItemList" parent="Control/TextureRect/NinePatchRect" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -276.0
margin_right = 300.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
custom_styles/cursor_unfocused = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 15
items = [  ]
select_mode = 0
allow_reselect = false
auto_height = true
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )
_sections_unfolded = [ "Columns", "Icon", "Rect", "Theme", "custom_colors", "custom_constants", "custom_styles" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/TextureRect" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1030.0
margin_top = 170.0
margin_right = 1670.0
margin_bottom = 770.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]

[node name="BuyingTitle" type="Label" parent="Control/TextureRect/NinePatchRect2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_top = -60.0
margin_right = 800.0
margin_bottom = -9.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Shop Inventory"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemList2" type="ItemList" parent="Control/TextureRect/NinePatchRect2" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -277.0
margin_right = 300.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
custom_styles/cursor_unfocused = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 15
items = [  ]
select_mode = 0
allow_reselect = false
auto_height = true
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )
_sections_unfolded = [ "Columns", "Icon", "Rect", "Theme", "custom_colors", "custom_constants", "custom_styles" ]

[node name="Sprite_DraggedItem" type="Sprite" parent="Control" index="1"]

[node name="WindowDialog_ItemSell" type="NinePatchRect" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 374.0
margin_top = 163.0
margin_right = 824.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemSell_TextureFrame_Icon" type="TextureRect" parent="Control/WindowDialog_ItemSell" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -24.0
margin_top = 10.0
margin_right = 24.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="ItemSell_RichTextLabel_ItemInfo" type="RichTextLabel" parent="Control/WindowDialog_ItemSell" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 61.0
margin_right = 432.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemSell_Button_SellItem" type="Button" parent="Control/WindowDialog_ItemSell" index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -55.0
margin_right = 50.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sell"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Close_Button_ItemSell" type="Button" parent="Control/WindowDialog_ItemSell" index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -51.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "X"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="WindowDialog_ItemBuy" type="NinePatchRect" parent="Control" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1204.0
margin_top = 222.0
margin_right = 1654.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemBuy_TextureFrame_Icon" type="TextureRect" parent="Control/WindowDialog_ItemBuy" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -24.0
margin_top = 10.0
margin_right = 24.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="ItemBuy_RichTextLabel_ItemInfo" type="RichTextLabel" parent="Control/WindowDialog_ItemBuy" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 61.0
margin_right = 432.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ItemBuy_Button_BuyItem" type="Button" parent="Control/WindowDialog_ItemBuy" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 245.0
margin_right = 275.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Buy"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Close_Button_ItemBuy" type="Button" parent="Control/WindowDialog_ItemBuy" index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -51.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "X"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="NotEnoughLabel" type="Label" parent="Control" index="4"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -25.5
margin_right = 193.0
margin_bottom = 25.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Not Enough Gold Coins"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="NotEnoughTimer" type="Timer" parent="Control/NotEnoughLabel" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="pressed" from="Control/TextureRect/Button_Return_To_World" to="." method="_on_Button_Return_To_World_pressed"]

[connection signal="item_rmb_selected" from="Control/TextureRect/NinePatchRect/ItemList" to="." method="_on_ItemList_item_rmb_selected"]

[connection signal="mouse_entered" from="Control/TextureRect/NinePatchRect/ItemList" to="." method="_on_ItemList_mouse_entered"]

[connection signal="mouse_exited" from="Control/TextureRect/NinePatchRect/ItemList" to="." method="_on_ItemList_mouse_exited"]

[connection signal="item_rmb_selected" from="Control/TextureRect/NinePatchRect2/ItemList2" to="." method="_on_ItemList2_item_rmb_selected"]

[connection signal="mouse_entered" from="Control/TextureRect/NinePatchRect2/ItemList2" to="." method="_on_ItemList2_mouse_entered"]

[connection signal="mouse_exited" from="Control/TextureRect/NinePatchRect2/ItemList2" to="." method="_on_ItemList2_mouse_exited"]

[connection signal="pressed" from="Control/WindowDialog_ItemSell/ItemSell_Button_SellItem" to="." method="_on_ItemSell_Button_SellItem_pressed"]

[connection signal="pressed" from="Control/WindowDialog_ItemSell/Close_Button_ItemSell" to="." method="_on_Close_Button_ItemSell_pressed"]

[connection signal="pressed" from="Control/WindowDialog_ItemBuy/ItemBuy_Button_BuyItem" to="." method="_on_ItemBuy_Button_BuyItem_pressed"]

[connection signal="pressed" from="Control/WindowDialog_ItemBuy/Close_Button_ItemBuy" to="." method="_on_Close_Button_ItemBuy_pressed"]

[connection signal="timeout" from="Control/NotEnoughLabel/NotEnoughTimer" to="." method="_on_NotEnoughTimer_timeout"]


